<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    >
	<!-- Banda superior roja -->
	<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="30sp"
	    android:background="@drawable/red_gradient"
    	>
		<ImageView
			android:id="@+id/logometro"
			android:paddingTop="2sp"
		    android:paddingRight="7sp"
		    android:paddingLeft="7sp"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
		    android:src="@drawable/logometro"
		    android:background="#00000000"
		/> 
		    
		<TextView
			android:id="@+id/title"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:paddingTop="6sp"
		    android:textColor="#ffffffff"
		    android:text="@string/app_name"
		    android:textStyle="bold"
		    />    
	</LinearLayout>
	<!-- Banda gris de datos -->
	<LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="115sp"
	    android:padding="10sp"
	    android:background="#ffe1e3e5">		    
		<LinearLayout 
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">	
			<TextView
				android:id="@+id/text1"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:textColor="#ff414b56"
			    android:text="@string/origin_station"
			    android:textStyle="bold"
			    />
			<TextView
				android:id="@+id/text_origen"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:paddingLeft="5sp"
			    android:textColor="#ff414b56"
			    android:textStyle="normal"
			    />
		</LinearLayout>
		<LinearLayout 
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">	
			<TextView
				android:id="@+id/text2"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:textColor="#ff414b56"
			    android:text="@string/destination_station"
			    android:textStyle="bold"
			    />
			<TextView
				android:id="@+id/text_destino"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:paddingLeft="5sp"
			    android:textColor="#ff414b56"
			    android:textStyle="normal"
			    />
		</LinearLayout>  
		<LinearLayout 
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">	
			<TextView
				android:id="@+id/text3"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:textColor="#ff414b56"
			    android:text="@string/total_time"
			    android:textStyle="bold"
			    />
			<TextView
				android:id="@+id/text_duracion"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:paddingLeft="5sp"
			    android:textColor="#ff414b56"
			    android:textStyle="normal"
			    />
		</LinearLayout>		
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">	
			<TextView
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:textColor="#ff414b56"
			    android:text="@string/station_number"
			    android:textStyle="bold"
			    />
			<TextView
				android:id="@+id/text_numero"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
			    android:paddingTop="4sp"
			    android:paddingLeft="5sp"
			    android:textColor="#ff414b56"
			    android:textStyle="normal"
			    />
		</LinearLayout>
	</LinearLayout>
	<!-- Datos del trayecto -->
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"	
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:background="@drawable/white_gradient">	
		<LinearLayout
			android:id="@+id/lin_layout"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:orientation="vertical">
			
			<LinearLayout
			android:id="@+id/layout_origen"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical">		
				
			<TextView 
				android:id="@+id/texto_origen" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:textColor="#ff414b56"
				android:textSize="20sp"
				android:textStyle="bold" android:text="@string/origin_route" android:paddingLeft="10sp"/>			
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/layout_metro"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="vertical">		
				
			<TextView 
				android:id="@+id/texto_origen" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:textColor="#ff414b56"
				android:textSize="20sp"
				android:textStyle="bold" android:text="@string/metro_route" android:paddingLeft="10sp"/>			
			</LinearLayout>	
			
			<LinearLayout
			android:id="@+id/layout_destino"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical">		
				
			<TextView 
				android:id="@+id/texto_destino" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:textColor="#ff414b56"
				android:textSize="20sp"
				android:textStyle="bold" android:text="@string/destination_route" android:paddingLeft="10sp"/>			
			</LinearLayout>	
					
		</LinearLayout>
	</ScrollView>
</LinearLayout>
