<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white_gradient"
    >
    <!-- Banda superior roja -->    
    <LinearLayout 
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="30sp"
	    android:background="@drawable/red_gradient"
    	>
		<ImageView
			android:id="@+id/logometro"
			android:paddingTop="2sp"
		    android:paddingRight="7sp"
		    android:paddingLeft="7sp"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
		    android:src="@drawable/logometro"
		    android:background="#00000000"
		/> 
		    
		<TextView
			android:id="@+id/title"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:paddingTop="6sp"
		    android:textColor="#ffffffff"
		    android:text="@string/app_name"
		    android:textStyle="bold"
		    />    
	</LinearLayout>
	<!-- 1. origen -->   
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="7sp"
	    android:layout_marginTop="-4sp">
	    <TextView
			android:id="@+id/one"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="1"
		    android:padding="5sp"
		    android:textSize="45sp"
		    android:textStyle="bold"
		    android:textColor="#ffdbdbdb"
		    />
		<TextView
			android:id="@+id/select_origin"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/select_origin"
		    android:textStyle="bold"
		    android:textSize="17.5sp"
		    android:textColor="#ff414b56"
		    />
	</LinearLayout>
	<!-- Spinner 1 -->   
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="32sp"
	    android:paddingLeft="42sp"
	    android:paddingRight="25sp"
    	>
		<Spinner 
		        android:id="@+id/origin_spinner"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:drawSelectorOnTop="true"
		        android:prompt="@string/station_prompt"
		        android:paddingLeft="10sp"
		        android:background="@drawable/custom_button"
		        android:layout_weight="1"
		    />
		<ImageButton
		 	android:id="@+id/search_origin"
		 	android:layout_width="40sp"
		 	android:layout_height="fill_parent"
		 	android:background="@drawable/custom_button"
		 	android:src="@drawable/search_pic"
		 	android:layout_weight="0.3" android:layout_marginLeft="-2.6sp"/>
	</LinearLayout>

	<!-- 2. destino -->   
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="7sp">
	    <TextView
			android:id="@+id/two"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="2"
		    android:padding="5sp"
		    android:textSize="45sp"
		    android:textStyle="bold"	    
		    android:textColor="#ffdbdbdb"
		    />   
		<TextView  
			android:id="@+id/select_destination"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/select_destination"
		    android:textStyle="bold"
		    android:textSize="17.5sp"
		    android:textColor="#ff414b56"
		    />
	</LinearLayout>
	<!-- Spinner 2 -->   
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="32sp"
	    android:paddingLeft="42sp"
	    android:paddingRight="25sp"
    	>
		<Spinner 
	        android:id="@+id/destination_spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:drawSelectorOnTop="true"
	        android:prompt="@string/station_prompt"
	        android:paddingLeft="10sp"
	        android:background="@drawable/custom_button"
		    android:layout_weight="1"
		/>
		<ImageButton
		 	android:id="@+id/search_destination"
		 	android:layout_width="40sp"
		 	android:layout_height="fill_parent"
		 	android:background="@drawable/custom_button"
		 	android:src="@drawable/search_pic"
		 	android:layout_marginLeft="-2.6sp"
		 android:layout_weight="0.3"/>
	</LinearLayout>
	
	<!-- 3. preferencias -->   
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="7sp">
	    <TextView
			android:id="@+id/three"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="3"
		    android:padding="5sp"
		    android:textSize="45sp"
		    android:textStyle="bold"	    
		    android:textColor="#ffdbdbdb"
		    />   
		<TextView  
			android:id="@+id/select_preferences"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/select_preferences"
		    android:textStyle="bold"
		    android:textSize="17.5sp"
		    android:textColor="#ff414b56"
		    />
	</LinearLayout>
	<!-- dia -->   
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="30sp"
	    android:paddingLeft="42sp"
	    >
	    <LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="90sp"
		    android:layout_height="fill_parent"
	    	>  
		    <TextView
				android:id="@+id/day"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/day_type"
			    android:textStyle="normal"	    
			    android:textColor="#ff414b56" android:textSize="13sp" android:layout_marginTop="3sp"/>
			</LinearLayout>   
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:paddingRight="25sp"
	    	>    
			<Spinner 
				android:id="@+id/day_spinner"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:drawSelectorOnTop="true"
				android:prompt="@string/day_prompt"
				android:paddingLeft="10sp"
				android:background="@drawable/custom_button"
			    />
		</LinearLayout>
	</LinearLayout>
	<!-- hora -->  
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="30sp"
	    android:paddingLeft="42sp"
	    >
	    <LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="90sp"
		    android:layout_height="fill_parent"
	    	>  
		    <TextView
				android:id="@+id/hour"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/hour"
			    android:textStyle="normal"	    
			    android:textColor="#ff414b56"
			    android:textSize="13sp" android:layout_marginTop="3sp"/>  
		</LinearLayout> 
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:paddingRight="25sp">    
			<TextView 
		        android:id="@+id/hour_view"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:drawSelectorOnTop="true"
		        android:paddingLeft="10sp"
		        android:textSize="16sp"
		        android:background="@drawable/custom_button"
		        android:clickable="true"	
		        android:focusable="true"            
	    		android:textColor="#ff000000"
	    		android:paddingTop="-5sp"
			    />
		</LinearLayout>
	</LinearLayout>
	<!-- ruta -->  
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="30sp"
	    android:paddingLeft="42sp"
	    >
	    <LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="90sp"
		    android:layout_height="fill_parent"
	    	>  
		    <TextView
				android:id="@+id/route"
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/route_type"
			    android:textStyle="normal"	    
			    android:textColor="#ff414b56"
			    android:textSize="13sp" 
			    android:layout_marginTop="3sp"/> 
		</LinearLayout>  
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:paddingRight="25sp"
	    	>    
			<Spinner 
		        android:id="@+id/route_spinner"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:drawSelectorOnTop="true"
		        android:prompt="@string/route_prompt"
		        android:paddingLeft="10sp"
		        android:background="@drawable/custom_button"
			    />
		</LinearLayout>
	</LinearLayout>
    <!-- botón -->  
	<Button
		android:layout_marginTop="12sp"
        android:id="@+id/submit_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:background="@drawable/custom_button"
	    />
    
</LinearLayout>
